# liquid-handler

./: README.md
cnc/: cnc.ino
flow-sensor/: flow-sensor.ino
peristaltic-pump/: peristaltic-pump.ino
pump/: pump.ino
pump-3/: Cargo.toml
pump-3/src/: main.rs  tmc2209.rs  usb.rs
pump2/: Cargo.toml  sdkconfig.defaults
pump2/src/: flow_sensor.rs  main.rs  tmc2209.rs
