[package]
name = "pump"
version = "0.1.0"
authors = ["Karl Krauth <karl.krauth@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "pump"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
anyhow = "*"
bitflags = "2.9"
deku = { version = "0.19.0", features = ["logging"] }
embedded-hal = "1.0.0"
esp-idf-hal = "0.45"
esp-idf-svc = "0.51"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
radium = { version = "1.1", features = ["portable-atomic-fallback"] }

[patch.crates-io]
bitvec = { git = "https://github.com/ferrilab/ferrilab.git", package = "bitvec", rev = "aa1c33c934e734d0b05fe0b2ab61dfff8707de11" }

# --- Optional Embassy Integration ---
# esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }

# If you enable embassy-time-driver, you MUST also add one of:

# a) Standalone Embassy libs ( embassy-time, embassy-sync etc) with a foreign async runtime:
# embassy-time = { version = "0.4.0", features = ["generic-queue-8"] } # NOTE: any generic-queue variant will work

# b) With embassy-executor:
# embassy-executor = { version = "0.7", features = ["executor-thread", "arch-std"] }

# NOTE: if you use embassy-time with embassy-executor you don't need the generic-queue-8 feature

# --- Temporary workaround for embassy-executor < 0.8 ---
# esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
# critical-section = { version = "1.1", features = ["std"], default-features = false }

[build-dependencies]
embuild = "0.33"
